app-1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  namespace: retail-store
  labels:
    app: app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: app-1
          image: thejoud1997/app-1:latest
          ports:
            - containerPort: 3000
