app-1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1
  namespace: retail-store
spec:
  selector:
    app: app-1
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
